container div deleted, overflow fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ body {
 #container {
 	position: relative;
 	text-align: center;
-	margin-top: 10%;
+	
 }
 
 
@@ -25,6 +25,7 @@ body {
 	padding-top: 0;
 	margin: 5%;
 	position: relative;
+    align-items: center;
 }
 
 
@@ -46,11 +47,11 @@ h1 {
 
 #dashboard {
 	font-size: 0.85rem;
-	overflow: hidden;
+	top:10%;
 	height: 75%;
 	background-color: #649B92;
 	color: rgb(32, 30, 28);
-	position: inherit;
+	position: absolute;
 	box-sizing: content-box;
 	border: 0.2rem solid #68A376;
 	margin-top: 1rem;
@@ -80,8 +81,9 @@ canvas {
 }
 
 .navigation {
-	bottom: 40rem;
+	
 	position: relative;
+    left:40rem;
 }
 
 
@@ -89,7 +91,6 @@ canvas {
 
 footer {
 	background: rgb(179, 171, 160);
-	position: absolute;
 	bottom: 0;
 	width: 100%;
 	height: 3rem;
@@ -147,8 +148,7 @@ textarea,
 input[type="email"],
 #email {
 	padding: 0.625rem;
-	border: #68A376;
-	solid 0.125rem;
+	border: #68A376 solid 0.125rem;
 	border-radius: 0.125rem;
 	box-sizing: border-box;
 	margin-top: 0.3125rem;
